- Implemented Meross API endpoint management - Improved configflow - Removed old .translation folder - Updated low-level MerossIot dependency - Removed ExtendedErrorCodes in favour of updated error codes - Bumped up version

--- a/custom_components/meross_cloud/translations/en.json
+++ b/custom_components/meross_cloud/translations/en.json
@@ -1,21 +1,27 @@
 {
-    "config": {
-        "abort": {
-            "single_instance_allowed": "Only a single configuration of Meross is allowed."
+  "config": {
+    "abort": {
+      "single_instance_allowed": "Only a single configuration of Meross is allowed."
+    },
+    "error": {
+      "invalid_credentials": "Invalid credentials.",
+      "connection_error": "Unable to connect to Meross.",
+      "invalid_http_endpoint": "Invalid Meross HTTTP api endpoint",
+      "api_invalid_ssl_code": "Invalid SSL response received by the server. Are you sure the server is exposed in HTTPS? Try plain http and see if this happens again.",
+      "unknown_error": "An unexpected error occurred"
+    },
+    "step": {
+      "user": {
+        "data": {
+          "password": "Password",
+          "username": "Email Address",
+          "http_api_endpoint": "HTTP API Endpoint",
+          "mqtt_hostname": "MQTT Hostname",
+          "mqtt_port": "MQTT Port"
         },
-        "error": {
-            "connection_error": "Unable to connect to Meross.",
-            "invalid_credentials": "Invalid credentials."
-        },
-        "step": {
-            "user": {
-                "data": {
-                    "password": "Password",
-                    "username": "Email Address"
-                },
-                "title": "Fill in your Meross login information"
-            }
-        },
-        "title": "Meross"
-    }
+        "title": "Fill in your Meross login information"
+      }
+    },
+    "title": "Meross"
+  }
 }
