--- a/custom_components/meross_cloud/translations/en.json
+++ b/custom_components/meross_cloud/translations/en.json
@@ -8,7 +8,8 @@
       "connection_error": "Unable to connect to Meross.",
       "invalid_http_endpoint": "Invalid Meross HTTTP api endpoint",
       "api_invalid_ssl_code": "Invalid SSL response received by the server. Are you sure the server is exposed in HTTPS? Try plain http and see if this happens again.",
-      "unknown_error": "An unexpected error occurred"
+      "unknown_error": "An unexpected error occurred",
+      "api_connection_refused": "Cannot connect to HTTP(S) API server. Make sure the address is valid"
     },
     "step": {
       "user": {
@@ -20,6 +21,10 @@
           "mqtt_port": "MQTT Port"
         },
         "title": "Fill in your Meross login information"
+      },
+      "reauth_confirm": {
+        "title": "Reauthentication required",
+        "description": "The Meross integration needs to re-authenticate your account"
       }
     },
     "title": "Meross"
