--- a/custom_components/meross_cloud/translations/it.json
+++ b/custom_components/meross_cloud/translations/it.json
@@ -20,7 +20,14 @@
           "username": "Indirizzo Email",
           "http_api_endpoint": "Endpoint HTTP",
           "mqtt_hostname": "Hostname Server MQTT",
-          "mqtt_port": "Porta Server MQTT"
+          "mqtt_port": "Porta Server MQTT",
+          "skip_mqtt_cert_validation": "Skip MQTT certificate validation checks",
+          "enable_rate_limits": "Abilita il limitatore delle chiamate API",
+          "global_rate_limit_max_tokens": "Limite burst rate globale",
+          "global_rate_limit_per_second": "Limite di chiamate al secondo globale",
+          "device_rate_limit_max_tokens": "Limite burst rate per singolo dispositivo",
+          "device_rate_limit_per_second": "Limite di chiamate al secondo per singolo dispositivo",
+          "device_max_command_queue": "Massimo numero di chiamate in coda per singolo dispositivo"
         },
         "title": "Inserisci le credenziali del tuo account Meross"
       },
