--- a/custom_components/meross_cloud/translations/it.json
+++ b/custom_components/meross_cloud/translations/it.json
@@ -21,13 +21,7 @@
           "http_api_endpoint": "Endpoint HTTP",
           "mqtt_hostname": "Hostname Server MQTT",
           "mqtt_port": "Porta Server MQTT",
-          "skip_mqtt_cert_validation": "Skip MQTT certificate validation checks",
-          "enable_rate_limits": "Abilita il limitatore delle chiamate API",
-          "global_rate_limit_max_tokens": "Limite burst rate globale",
-          "global_rate_limit_per_second": "Limite di chiamate al secondo globale",
-          "device_rate_limit_max_tokens": "Limite burst rate per singolo dispositivo",
-          "device_rate_limit_per_second": "Limite di chiamate al secondo per singolo dispositivo",
-          "device_max_command_queue": "Massimo numero di chiamate in coda per singolo dispositivo"
+          "skip_mqtt_cert_validation": "Skip MQTT certificate validation checks"
         },
         "title": "Inserisci le credenziali del tuo account Meross"
       },
@@ -37,5 +31,21 @@
       }
     },
     "title": "Meross"
-  }
+  },
+  "options": {
+        "error": {},
+        "step": {
+            "init": {
+                "data": {
+                    "enable_rate_limits": "Abilita il limitatore delle chiamate API",
+                    "global_rate_limit_max_tokens": "Limite burst rate globale",
+                    "global_rate_limit_per_second": "Limite di chiamate al secondo globale",
+                    "device_rate_limit_max_tokens": "Limite burst rate per singolo dispositivo",
+                    "device_rate_limit_per_second": "Limite di chiamate al secondo per singolo dispositivo",
+                    "device_max_command_queue": "Massimo numero di chiamate in coda per singolo dispositivo"
+                },
+                "title": "Configure Manager"
+            }
+        }
+    }
 }
