Updated README documentation Bumped version Updated translation

--- a/custom_components/meross_cloud/translations/en.json
+++ b/custom_components/meross_cloud/translations/en.json
@@ -38,10 +38,10 @@
             "init": {
                 "data": {
                     "enable_rate_limits": "Enable API rate limits",
-                    "global_rate_limit_max_tokens": "Global API burst limit",
-                    "global_rate_limit_per_second": "Global API rate limit (maximum api calls/second)",
-                    "device_rate_limit_max_tokens": "Single device API burst limit",
-                    "device_rate_limit_per_second": "Single device API rate limit (maximum api calls/second)",
+                    "global_rate_limit_max_tokens": "Global MQTT burst limit",
+                    "global_rate_limit_per_second": "Global MQTT rate limit (maximum api calls/second)",
+                    "device_rate_limit_max_tokens": "Single device MQTT burst limit",
+                    "device_rate_limit_per_second": "Single device MQTT rate limit (maximum api calls/second)",
                     "device_max_command_queue": "Single device Maximum command queue length"
                 },
                 "title": "Configure Manager"
