--- a/custom_components/meross_cloud/translations/it.json
+++ b/custom_components/meross_cloud/translations/it.json
@@ -37,12 +37,12 @@
         "step": {
             "init": {
                 "data": {
-                    "enable_rate_limits": "Abilita il limitatore delle chiamate API",
+                    "enable_rate_limits": "Abilita il limitatore dei comandi MQTT",
                     "global_rate_limit_max_tokens": "Limite burst rate globale",
-                    "global_rate_limit_per_second": "Limite di chiamate al secondo globale",
+                    "global_rate_limit_per_second": "Limite di comandi al secondo globale",
                     "device_rate_limit_max_tokens": "Limite burst rate per singolo dispositivo",
-                    "device_rate_limit_per_second": "Limite di chiamate al secondo per singolo dispositivo",
-                    "device_max_command_queue": "Massimo numero di chiamate in coda per singolo dispositivo"
+                    "device_rate_limit_per_second": "Limite di comandi al secondo per singolo dispositivo",
+                    "device_max_command_queue": "Massimo numero di comandi in coda per singolo dispositivo"
                 },
                 "title": "Configure Manager"
             }
